# chatbot_colombina

./: .env.example  .gitignore  RAILWAY_DEPLOY.md  README.md  Taller1.ipynb  api_server.py  app.py  chatbot.py  pyproject.toml  railway.json  requirements.txt
RAG/agent/: colombina_agent.py  company_data.json  tool_rag.py  tool_structured_data.py
RAG/vector_db/: load_data.py
api/: README.md  __init__.py  main.py
chunking/: chunking.py  chunks.json
interface/html/: app.js  index.html  styles.css
interface/streamlit/: app.py
knowledge_base/: clean_kb.py  improved_knowledge_base.txt  knowledge_base.txt
llm/: llm.py  llm_openai.py
llm/FAQ/: faq_ollama.py  faq_openai.py
llm/QA/: qa_ollama.py  qa_openai.py
llm/summary/: generate_summary.py
logging_util/: logger.py
preprocessing/: clean_md_files.py
preprocessing/cleaned_md_files/: co-es_blog_detail_283_el-amor-prohibido-mas-esperado-colombina-y-ramo-lanzan-el-helado-de-chocoramo_enhanced.md  co-es_blog_enhanced.md  co-es_contactanos_lineas-de-atencion_enhanced.md  co-es_gestion-de-sostenibilidad_enhanced.md  co-es_informacion-legal_enhanced.md  co-es_inversionistas_enhanced.md  co-es_preguntas-frecuentes_enhanced.md  co-es_product_enhanced.md  co-es_promociones_enhanced.md  co-es_proveedores_enhanced.md  co-es_sostenibilidad_enhanced.md  co-es_sostenibilidad_reportes_enhanced.md  co-es_sostenibilidad_resultados_enhanced.md  coffee-delight-reta-al-campeon-mundial-de-baristas-a-preparar-un-cappuccino-en-formato-miniatura.md  energia.md  estrategia.md  historia.md  (+11 more)
web_scraping/: colombina_links.csv
(+313 files in other folders)
